# timescalecalculus

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
ex/: plot.py
src/timescalecalculus/: basic.py  integral.py  legacytimescalecalculus.py  plot.py  recursive.py  utility.py
src/timescalecalculus/core/: __init__.py  genscale.py  interval.py  point.py  scale.py  time.py  utility.py
src/timescalecalculus/diffeq/: __init__.py  delay.py  ordinary.py  utility.py
test/: test_basic.py  test_integral.py  test_recursive.py
test/core/: test_interval.py  test_point.py  test_scale.py  test_time.py  test_utility.py
test/diffeq/: test_delay.py  test_ordinary.py
