[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timescalecalculus"]

[project]
name = "timescalecalculus"
authors = [
    {name = "Tom Cuchta", email = "tomcuchta@gmail.com"},
]
version = "1.0.0"
description = "A time scale calculus library."
dependencies = [
    "numpy>=1.26.4",
    "mpmath>=1.3.0",
    "matplotlib>=3.9.0",
    "pytest>=8.2.1",
    "scipy>=1.13.1",
    "sympy>=1.12",
    "jitcdde>=1.8.1",
]

[project.urls]
Homepage = "https://github.com/tomcuchta/timescalecalculus"

[tool.black]
--line-length = 99999
